[project]
name = "montykit"
version = "0.1.0"
description = "A general-purpose Python utility kit."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["utilities", "tools", "helpers", "monty", "general-purpose"]
authors = [
    {name = "Tyler", email = "tyleruploadspython@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
]
dependencies = [
    "textblob>=0.17",
    "textstat>=0.7",
]

[project.urls]
"Homepage" = "https://github.com/tyleruploads/montykit"
Source = "https://github.com/tyleruploads/montykit"
Issues = "https://github.com/tyleruploads/montykit/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.package-data]
montykit = ["*.json"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"